// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render default button 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0.25rem;
  border-style: solid;
  border-width: 1px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.25rem;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  width: 100%;
  background-color: #3C64F4;
  border-color: #3C64F4;
  font-weight: 600;
}

.c1:focus {
  outline: none;
}

.c1[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c1 + .c0 {
  margin-left: 1rem;
}

.c1:active {
  background-color: #0B38D9;
}

.c1:focus {
  box-shadow: 0 0 0 4px #DBE3FE;
}

.c1:hover:not(:active) {
  background-color: #2852EB;
}

.c1[disabled] {
  background-color: #D9DCE9;
}

.c2 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c1 {
    width: auto;
  }
}

<button
  class="c0 c1"
  role="button"
  tabindex="0"
>
  <span
    class="c2"
  >
    Button
  </span>
</button>
`;

exports[`render destructive button 1`] = `
.c3 + .c0 {
  margin-left: 1rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0.25rem;
  border-style: solid;
  border-width: 1px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.25rem;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  width: 100%;
  background-color: #DB3643;
  border-color: #DB3643;
  font-weight: 600;
}

.c1:focus {
  outline: none;
}

.c1[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c1 + .c0 {
  margin-left: 1rem;
}

.c1:active {
  background-color: #AD0000;
}

.c1:focus {
  box-shadow: 0 0 0 4px #FEDBDE;
}

.c1:hover:not(:active) {
  background-color: #CC1F1F;
}

.c1[disabled] {
  background-color: #D9DCE9;
}

.c2 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c1 {
    width: auto;
  }
}

<button
  class="c0 c1"
  role="button"
  tabindex="0"
>
  <span
    class="c2"
  >
    Button
  </span>
</button>
`;

exports[`render destructive disabled button 1`] = `
.c3 + .c0 {
  margin-left: 1rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0.25rem;
  border-style: solid;
  border-width: 1px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.25rem;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  width: 100%;
  background-color: #DB3643;
  border-color: #DB3643;
  font-weight: 600;
}

.c1:focus {
  outline: none;
}

.c1[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c1 + .c0 {
  margin-left: 1rem;
}

.c1:active {
  background-color: #AD0000;
}

.c1:focus {
  box-shadow: 0 0 0 4px #FEDBDE;
}

.c1:hover:not(:active) {
  background-color: #CC1F1F;
}

.c1[disabled] {
  background-color: #D9DCE9;
}

.c2 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c1 {
    width: auto;
  }
}

<button
  class="c0 c1"
  disabled=""
  role="button"
  tabindex="0"
>
  <span
    class="c2"
  >
    Button
  </span>
</button>
`;

exports[`render disabled button 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0.25rem;
  border-style: solid;
  border-width: 1px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.25rem;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  width: 100%;
  background-color: #3C64F4;
  border-color: #3C64F4;
  font-weight: 600;
}

.c1:focus {
  outline: none;
}

.c1[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c1 + .c0 {
  margin-left: 1rem;
}

.c1:active {
  background-color: #0B38D9;
}

.c1:focus {
  box-shadow: 0 0 0 4px #DBE3FE;
}

.c1:hover:not(:active) {
  background-color: #2852EB;
}

.c1[disabled] {
  background-color: #D9DCE9;
}

.c2 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c1 {
    width: auto;
  }
}

<button
  class="c0 c1"
  disabled=""
  role="button"
  tabindex="0"
>
  <span
    class="c2"
  >
    Button
  </span>
</button>
`;

exports[`render secondary button 1`] = `
.c3 + .c0 {
  margin-left: 1rem;
}

.c4 + .c0 {
  margin-left: 1rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0.25rem;
  border-style: solid;
  border-width: 1px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.25rem;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: #3C64F4;
  color: #3C64F4;
}

.c1:focus {
  outline: none;
}

.c1[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c1 + .c0 {
  margin-left: 1rem;
}

.c1:active {
  background-color: #DBE3FE;
}

.c1:focus {
  box-shadow: 0 0 0 4px #DBE3FE;
}

.c1:hover:not(:active) {
  background-color: #F0F3FF;
}

.c1[disabled] {
  color: #D9DCE9;
}

.c2 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c1 {
    width: auto;
  }
}

<button
  class="c0 c1"
  role="button"
  tabindex="0"
>
  <span
    class="c2"
  >
    Button
  </span>
</button>
`;

exports[`render secondary destructive button 1`] = `
.c3 + .c0 {
  margin-left: 1rem;
}

.c4 + .c0 {
  margin-left: 1rem;
}

.c5 + .c0 {
  margin-left: 1rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0.25rem;
  border-style: solid;
  border-width: 1px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.25rem;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: #DB3643;
  color: #DB3643;
}

.c1:focus {
  outline: none;
}

.c1[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c1 + .c0 {
  margin-left: 1rem;
}

.c1:active {
  background-color: #FEDBDE;
}

.c1:focus {
  box-shadow: 0 0 0 4px #FEDBDE;
}

.c1:hover:not(:active) {
  background-color: #FFF0F1;
}

.c1[disabled] {
  color: #D9DCE9;
}

.c2 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c1 {
    width: auto;
  }
}

<button
  class="c0 c1"
  role="button"
  tabindex="0"
>
  <span
    class="c2"
  >
    Button
  </span>
</button>
`;

exports[`render secondary destructive disabled button 1`] = `
.c3 + .c0 {
  margin-left: 1rem;
}

.c4 + .c0 {
  margin-left: 1rem;
}

.c5 + .c0 {
  margin-left: 1rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0.25rem;
  border-style: solid;
  border-width: 1px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.25rem;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: #DB3643;
  color: #DB3643;
}

.c1:focus {
  outline: none;
}

.c1[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c1 + .c0 {
  margin-left: 1rem;
}

.c1:active {
  background-color: #FEDBDE;
}

.c1:focus {
  box-shadow: 0 0 0 4px #FEDBDE;
}

.c1:hover:not(:active) {
  background-color: #FFF0F1;
}

.c1[disabled] {
  color: #D9DCE9;
}

.c2 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c1 {
    width: auto;
  }
}

<button
  class="c0 c1"
  disabled=""
  role="button"
  tabindex="0"
>
  <span
    class="c2"
  >
    Button
  </span>
</button>
`;

exports[`render secondary disabled button 1`] = `
.c3 + .c0 {
  margin-left: 1rem;
}

.c4 + .c0 {
  margin-left: 1rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0.25rem;
  border-style: solid;
  border-width: 1px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.25rem;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: #3C64F4;
  color: #3C64F4;
}

.c1:focus {
  outline: none;
}

.c1[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c1 + .c0 {
  margin-left: 1rem;
}

.c1:active {
  background-color: #DBE3FE;
}

.c1:focus {
  box-shadow: 0 0 0 4px #DBE3FE;
}

.c1:hover:not(:active) {
  background-color: #F0F3FF;
}

.c1[disabled] {
  color: #D9DCE9;
}

.c2 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c1 {
    width: auto;
  }
}

<button
  class="c0 c1"
  disabled=""
  role="button"
  tabindex="0"
>
  <span
    class="c2"
  >
    Button
  </span>
</button>
`;

exports[`render subtle button 1`] = `
.c3 + .c0 {
  margin-left: 1rem;
}

.c4 + .c0 {
  margin-left: 1rem;
}

.c5 + .c0 {
  margin-left: 1rem;
}

.c6 + .c0 {
  margin-left: 1rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0.25rem;
  border-style: solid;
  border-width: 1px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.25rem;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c1:focus {
  outline: none;
}

.c1[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c1 + .c0 {
  margin-left: 1rem;
}

.c1:active {
  background-color: #DBE3FE;
}

.c1:focus {
  box-shadow: 0 0 0 4px #DBE3FE;
}

.c1:hover:not(:active) {
  background-color: #F0F3FF;
}

.c1[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c2 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c1 {
    width: auto;
  }
}

<button
  class="c0 c1"
  role="button"
  tabindex="0"
>
  <span
    class="c2"
  >
    Button
  </span>
</button>
`;

exports[`render subtle destructive button 1`] = `
.c3 + .c0 {
  margin-left: 1rem;
}

.c4 + .c0 {
  margin-left: 1rem;
}

.c5 + .c0 {
  margin-left: 1rem;
}

.c6 + .c0 {
  margin-left: 1rem;
}

.c7 + .c0 {
  margin-left: 1rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0.25rem;
  border-style: solid;
  border-width: 1px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.25rem;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #DB3643;
}

.c1:focus {
  outline: none;
}

.c1[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c1 + .c0 {
  margin-left: 1rem;
}

.c1:active {
  background-color: #FEDBDE;
}

.c1:focus {
  box-shadow: 0 0 0 4px #FEDBDE;
}

.c1:hover:not(:active) {
  background-color: #FFF0F1;
}

.c1[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c2 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c1 {
    width: auto;
  }
}

<button
  class="c0 c1"
  role="button"
  tabindex="0"
>
  <span
    class="c2"
  >
    Button
  </span>
</button>
`;

exports[`render subtle destructive disabled button 1`] = `
.c3 + .c0 {
  margin-left: 1rem;
}

.c4 + .c0 {
  margin-left: 1rem;
}

.c5 + .c0 {
  margin-left: 1rem;
}

.c6 + .c0 {
  margin-left: 1rem;
}

.c7 + .c0 {
  margin-left: 1rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0.25rem;
  border-style: solid;
  border-width: 1px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.25rem;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #DB3643;
}

.c1:focus {
  outline: none;
}

.c1[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c1 + .c0 {
  margin-left: 1rem;
}

.c1:active {
  background-color: #FEDBDE;
}

.c1:focus {
  box-shadow: 0 0 0 4px #FEDBDE;
}

.c1:hover:not(:active) {
  background-color: #FFF0F1;
}

.c1[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c2 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c1 {
    width: auto;
  }
}

<button
  class="c0 c1"
  disabled=""
  role="button"
  tabindex="0"
>
  <span
    class="c2"
  >
    Button
  </span>
</button>
`;

exports[`render subtle disabled button 1`] = `
.c3 + .c0 {
  margin-left: 1rem;
}

.c4 + .c0 {
  margin-left: 1rem;
}

.c5 + .c0 {
  margin-left: 1rem;
}

.c6 + .c0 {
  margin-left: 1rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0.25rem;
  border-style: solid;
  border-width: 1px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.25rem;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c1:focus {
  outline: none;
}

.c1[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c1 + .c0 {
  margin-left: 1rem;
}

.c1:active {
  background-color: #DBE3FE;
}

.c1:focus {
  box-shadow: 0 0 0 4px #DBE3FE;
}

.c1:hover:not(:active) {
  background-color: #F0F3FF;
}

.c1[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c2 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c1 {
    width: auto;
  }
}

<button
  class="c0 c1"
  disabled=""
  role="button"
  tabindex="0"
>
  <span
    class="c2"
  >
    Button
  </span>
</button>
`;
